# dds19

./: .gitignore  README.md
dds-nn/: dataset.py  model.py  train.py
dds-plugin/: .clang-format  CMakeLists.txt
dds-plugin/model/: dds19_lstm32.json  dds19_lstm64.json  dds19_lstm96.json
dds-plugin/src/: DelayLine.cpp  DelayLine.h  Editor.cpp  Editor.h  Model.cpp  Model.h  Processor.cpp  Processor.h
lstm-eigen/: CMakeLists.txt
lstm-eigen/model/: add_model_here.txt
lstm-eigen/process/: add_audio_here.txt
lstm-eigen/src/: main.cpp
